--- a/raionsnackbar/src/main/res/layout/snackbar_layout.xml
+++ b/raionsnackbar/src/main/res/layout/snackbar_layout.xml
@@ -6,7 +6,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="16dp"
+    android:padding="8dp"
     tools:background="@color/blue">
 
     <ImageView
@@ -32,8 +32,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
-        android:textSize="16sp"
+        android:textSize="14sp"
         android:fontFamily="@font/poppins_semibold"
+        android:textColor="@color/white"
         app:layout_constraintTop_toTopOf="@id/iv_icon"
         app:layout_constraintStart_toEndOf="@id/iv_icon"
         app:layout_constraintEnd_toStartOf="@id/iv_raion"
