finished snackbar code and documentation

--- a/raionsnackbar/src/main/res/values/colors.xml
+++ b/raionsnackbar/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="yellow">#BFF9BB04</color>
     <color name="blue">#BF4286F5</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray">#FF121010</color>
 </resources>
